fix: Ask AI icon was not visible

--- a/src/pages/editor/index.css
+++ b/src/pages/editor/index.css
@@ -194,7 +194,7 @@
   display: flex;
   gap: 16px;
   margin-bottom: 16px;
-  display: none;
+  /* display: none; */
 }
 
 .stack-dropdown div svg:nth-of-type(2) {
